--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,8 +39,10 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-select": "^2.3.1",
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
+    "ember-route-action-helper": "^2.0.7",
     "ember-source": "~3.8.0",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
